# cosmwasm-ai-delegated-spend

./: .gitignore  Cargo.toml  README.md  STUDY_PLAN.md  STUDY_PLAN_REVISED.md
.github/: copilot-instructions.md
.github/prompts/: project.prompt.md
src/: error.rs  lib.rs  schema.rs  state.rs
src/contract/: exec.rs  init.rs  mod.rs  query.rs
src/msg/: exec.rs  init.rs  query.rs
tests/: integration.rs
