[package]
name = "credits_delegation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.4"
cosmwasm-schema = "1.1.4"
cw-storage-plus = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8.1"
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.13.4"
